--- a/Japan-travel.html
+++ b/Japan-travel.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <h1 class="title">Japan Travel</h1>
-        <img class="logo" src="images/japan-logo.png" alt="japan-travel-logo" height="150px">
+        <!-- <h1 class="title">Japan Travel</h1> -->
+        <img class="logo" src="images/japan-logo.png" alt="japan-travel-logo">
         <nav class="menu">
             <ul>
                 <li><a href="#tokyo">Tokyo</a></li>
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <main>
-        <img class="top-image" src="images/tokyo.jpg" alt="Tokyo landmarks">
+        <!-- <img class="top-image" src="images/tokyo.jpg" alt="Tokyo landmarks"> -->
         <div class="tokyo">
         <h2 id="tokyo">Tokyo</h2>
         <iframe class="youtube-video" width="560" height="315" src="https://www.youtube.com/embed/Hr_TbL5ejuQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
