Main content updates
- Changed alignments
- Used flexbox for all of main items
- Added media queries for stacking content in mobile view
- Fixed videos width for mobile view

--- a/Japan-travel.html
+++ b/Japan-travel.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     <header>
-        <!-- <h1 class="title">Japan Travel</h1> -->
-        <img class="logo" src="images/japan-logo.png" alt="japan-travel-logo">
+        <img class="logo" src="images/japan-logo1.png" alt="japan-travel-logo">
         <nav class="menu">
             <ul>
                 <li><a href="#tokyo">Tokyo</a></li>
@@ -21,10 +20,12 @@
     </header>
     <main>
         <!-- <img class="top-image" src="images/tokyo.jpg" alt="Tokyo landmarks"> -->
+        <h1 class="main-title">Japan Travel</h1>
         <div class="tokyo">
         <h2 id="tokyo">Tokyo</h2>
-        <iframe class="youtube-video" width="560" height="315" src="https://www.youtube.com/embed/Hr_TbL5ejuQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <h3>Where to go?</h3>
+            <div class="places">
+                <div class="where-to-go-places">
+                <h3>Where to go?</h3>
                 <ul class="destinations">
                     <li>Shibuya</li>
                     <li>Shinjuku</li>
@@ -32,11 +33,15 @@
                     <li>Asakusa</li>
                     <li>Odaiba</li>
                 </ul>
+                </div>
+        <iframe class="youtube-video" width="560" height="315" src="https://www.youtube.com/embed/Hr_TbL5ejuQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </div>
 
         <div class="osaka">
         <h2 id="osaka">Osaka</h2>
-        <iframe class="youtube-video" width="560" height="315" src="https://www.youtube.com/embed/DyzalUUioQA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="places"> 
+                <div class="where-to-go-places">
             <h3>Where to go?</h3>
                 <ul class="destinations">
                     <li>Dotonbori</li>
@@ -45,18 +50,25 @@
                     <li>Osaka Castle</li>
                     <li>Namba Yasaka Shrine</li>
                 </ul>
+                </div>
+                <iframe class="youtube-video" width="560" height="315" src="https://www.youtube.com/embed/DyzalUUioQA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </div>
         <div class="kyoto">
         <h2 id="kyoto">Kyoto</h2>
-        <iframe class="youtube-video" width="560" height="315" src="https://www.youtube.com/embed/2G0Hh8f9Cc8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <h3>Where to go?</h3>
-        <ul class="destinations">
+        <div class="places"> 
+            <div class="where-to-go-places">
+         <h3>Where to go?</h3>
+            <ul class="destinations">
                 <li>Iwatayama Monkey Park</li>
                 <li>Nishiki Market</li>
                 <li>Ginkakuji Temple</li>
                 <li>Arashiyama Bamboo Groves</li>
                 <li>Gion</li>
         </ul>
+            </div>
+        <iframe class="youtube-video" width="560" height="315" src="https://www.youtube.com/embed/2G0Hh8f9Cc8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </div>
     
     </main>
