Animation and Back to top
- Added animation to h1
- Added Back to top link at the bottom of the page

--- a/Japan-travel.html
+++ b/Japan-travel.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <header>
+    <header id="top">
         <img class="logo" src="images/japan-logo1.png" alt="japan-travel-logo">
         <nav class="menu">
             <ul>
@@ -124,7 +124,8 @@
             
         </div>
     </div>
-    
+
+    <p class="bottom"><a class="back-to-top" href="#top">Back to top</a></p>
     </main>
     <footer class="footer">
         <p>Designed by One Cactus <br> Copyright 2021</p>
