Voting section added

--- a/Japan-travel.html
+++ b/Japan-travel.html
@@ -125,10 +125,20 @@
         </div>
     </div>
 
+    <div class="voting">
+        <h3>Have you been to Japan?</h3>
+    <p id="votesYes">3 Yes</p>
+    <p id="votesNo">4 No</p>
+    <button id="yes" onclick=upvote()>Yup</button>
+    <button id="no" onclick=downvote()>Nop</button>
+    <script src="script.js"></script>
+    </div>
+
+
     <p class="bottom"><a class="back-to-top" href="#top">Back to top</a></p>
     </main>
     <footer class="footer">
-        <p>Designed by One Cactus <br> Copyright 2021</p>
+        <p>Designed by One Cactus <br> Copyright 2023</p>
       </footer>
 </body> 
 </html>
