--- a/Japan-travel.html
+++ b/Japan-travel.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <!-- <img class="top-image" src="images/tokyo.jpg" alt="Tokyo landmarks"> -->
-        <h1 class="main-title">Japan Travel Ok</h1>
+        <h1 class="main-title">Japan Travel</h1>
         <div class="tokyo" id="tokyo">
             <div class="places">
                 <div class="where-to-go-places">
